--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,21 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-size: 18px;
   line-height: 1.3;
-  @extend %rubik-400;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
   color: $dark;
   background-color: $silver-100;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .container {
@@ -47,6 +59,7 @@ body {
   padding: 12px 32px;
   border-radius: 6px;
   transition: outline 0.5s, background-color 0.5s, color 0.5s;
+  display: inline-block;
 
   &:focus {
     outline: 2px solid rgba(255, 104, 56, 0.7);
@@ -63,12 +76,13 @@ body {
   &:active {
     background-color: rgba(255, 122, 80, 0.1);
   }
+
+  &--small {
+    padding: 7px 16px;
+    font-size: 14px;
+  }
 }
 
-.btn--small {
-  padding: 7px 16px;
-  font-size: 14px;
-}
 
 .sr-only {
   position: absolute;
