--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -48,15 +48,23 @@ button,
 textarea,
 select {
   font: inherit;
+  outline-color: transparent;
+  padding: 0;
 }
 
 button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
+  color: inherit;
 }
 
 a {
   text-decoration: none;
   color: inherit;
   outline-color: transparent;
+}
+
+address {
+  font-style: normal;
 }
