--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,9 +1,12 @@
 $orange-900: #ff6838;
+$orange-500: #FFF2ED;
+$orange-700: #FAEDED;
 $dark: #31352b;
 $darkBlue-900: #363853;
 $gray: #c2c2c2;
 $silver-100: #f9faff;
 $silver-200: #ececec;
+$silver-300: #EEEFF3;
 $white: #fff;
 
 %rubik-300 {
