--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
+@import 'fonts';
 @import 'reset';
 @import 'vars';
-@import 'fonts';
+@import 'libs';
 @import 'global';
 
 .menu {
@@ -61,15 +62,16 @@
   }
 
   &__user-link {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: auto;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 44px;
     height: 44px;
     position: relative;
     border-radius: 5px;
-    transition: outline 0.5s, background-color 0.5s;
+    transition: outline 0.5s, background-color 0.5s, stroke 0.5s;
+    stroke: $darkBlue-900;
+    fill: transparent;
 
     &:focus {
       outline: 2px solid rgba(255, 104, 56, 0.7);
@@ -78,6 +80,12 @@
 
     &:hover {
       background-color: rgb(255, 122, 80);
+      stroke: $white;
+
+      &>.menu__user-number {
+        background-color: $white;
+        color: $orange-900;
+      }
     }
 
     &:active {
@@ -96,11 +104,16 @@
     text-align: center;
     top: 8px;
     left: 27px;
+    transition: background-color 0.5s, color 0.5s;
   }
 }
 
-.header {
-  &__hero {
+.burger-menu {
+  display: none;
+}
+
+.hero {
+  &__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -112,7 +125,7 @@
 
   &__title {
     font-size: 66px;
-    @extend %rubik-500;
+    font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 20px;
 
@@ -168,39 +181,8 @@
     display: flex;
     align-items: center;
     font-size: 20px;
-    transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, outline 0.5s;
-
-    &::before {
-      content: '';
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-      width: 44px;
-      height: 44px;
-      display: block;
-      margin-right: 10px;
-      color: #363853;
-    }
-
-    &--burger::before {
-      background-image: url('../images/popular-filter/popular-filter-icon-1.svg');
-    }
-
-    &--pizza::before {
-      background-image: url('../images/popular-filter/popular-filter-icon-2.svg');
-    }
-
-    &--sandwich::before {
-      background-image: url('../images/popular-filter/popular-filter-icon-3.svg');
-    }
-
-    &--asia::before {
-      background-image: url('../images/popular-filter/popular-filter-icon-4.svg');
-    }
-
-    &--dish::before {
-      background-image: url('../images/popular-filter/popular-filter-icon-5.svg');
-    }
+    transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, outline 0.5s, fill 0.5s;
+    fill: $darkBlue-900;
 
     &:focus {
       outline: 2px solid rgba(255, 104, 56, 0.7);
@@ -210,15 +192,24 @@
       background-color: rgba(255, 122, 80, 0.1);
       outline: 2px solid rgba(255, 104, 56, 0.7);
       color: $orange-900;
+      fill: $orange-900;
     }
 
     &:active {
       box-shadow: inset 0 -5px 12px rgba(255, 103, 56, 0.2);
     }
 
-    &--active {
+    &.mixitup-control-active {
       background-color: $orange-900;
       color: $white;
+      fill: $white;
+    }
+
+    &-icon {
+      width: 44px;
+      height: 44px;
+      margin-right: 10px;
+      display: block;
     }
   }
 
@@ -256,7 +247,7 @@
   }
 
   &__number {
-    @extend %rubik-500;
+    font-weight: 500;
     color: $darkBlue-900;
     margin-bottom: 10px;
   }
@@ -265,8 +256,293 @@
     font-size: 20px;
     line-height: 1.5;
     text-decoration: underline;
+    transition: outline 0.5s, text-decoration-color 0.3s, color 0.5s, text-shadow 0.5s;
+    border-radius: 5px;
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      text-decoration-color: transparent;
+    }
+
+    &:hover {
+      color: $orange-900;
+      text-decoration-color: transparent;
+    }
+
+    &:active {
+      color: $dark;
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+      text-decoration-color: transparent;
+    }
+
   }
 
+}
+
+.features {
+  &__inner {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__content {
+    max-width: 470px;
+    width: 100%;
+    text-align: left;
+  }
+
+  &__title {
+    margin-bottom: 30px;
+  }
+
+  &__text {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+
+  &__list {
+    margin-bottom: 30px;
+  }
+
+  &__item {
+    font-size: 24px;
+    line-height: 1.5;
+    display: flex;
+    gap: 30px;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.restorant {
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  &__item {
+    text-align: left;
+    border-radius: 10px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+
+  &__text {
+    font-size: 24px;
+    padding: 15px 20px 20px;
+  }
+
+  &__time {
+    padding: 0 20px 20px;
+    font-weight: 300;
+    display: flex;
+
+    &::before {
+      content: '';
+      background-image: url('../images/timer.svg');
+      width: 22px;
+      height: 22px;
+      display: block;
+      margin-right: 10px;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 33px;
+    transform: translateY(-50%);
+    transition: left 0.7s;
+  }
+
+  &__btn {
+    background-color: $orange-900;
+    border-radius: 20px;
+    fill: $white;
+    width: 79px;
+    height: 33px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    transition: background-color 0.5s, outline 0.5s, fill 0.5s;
+
+    &:focus {
+      background-color: $orange-500;
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      fill: $orange-900;
+    }
+
+    &:hover {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      fill: $orange-900;
+      background-color: $white;
+
+      &>.restorant__icon {
+        left: 53px;
+      }
+    }
+
+    &:active {
+      background-color: $orange-500;
+      fill: $orange-900;
+    }
+  }
+
+
+}
+
+.coments {
+
+  &__inner {
+    position: relative;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+  }
+
+  &__item-inner {
+    max-width: 570px;
+    width: 100%;
+  }
+
+  &__img {
+    border-radius: 50%;
+    margin-right: 80px;
+  }
+
+  &__text {
+    font-style: italic;
+    font-size: 20px;
+    line-height: 1.5;
+    position: relative;
+    margin-bottom: 30px;
+
+    &::before {
+      content: '';
+      background-image: url('../images/coment__before.svg');
+      display: inline-block;
+      width: 24px;
+      height: 20px;
+      position: absolute;
+      left: -40px;
+      top: 0;
+    }
+
+    &::after {
+      content: '';
+      background-image: url('../images/coment__after.svg');
+      display: inline-block;
+      width: 24px;
+      height: 20px;
+      position: absolute;
+      bottom: 0;
+      right: -40px;
+    }
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 20px;
+    color: $orange-900;
+    margin-bottom: 15px;
+  }
+
+  &__subtitle {
+    font-size: 14px;
+    margin-bottom: 30px;
+  }
+
+
+
+  .slick {
+    &-arrow {
+      position: absolute;
+      bottom: -27px;
+      transform: translateY(-50%);
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      fill: $gray;
+      border: 3px solid $gray;
+    }
+
+    &-prev {
+      left: calc(50% - 107px);
+    }
+
+    &-next {
+      left: calc(50% + 73px);
+    }
+
+    &-dots {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+
+      & li {
+        & button {
+          background-color: $gray;
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          font-size: 0;
+        }
+
+        &.slick-active {
+          & button {
+            background-color: $orange-900;
+          }
+        }
+      }
+    }
+  }
+}
+
+.app {
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    text-align: left;
+    max-width: 540px;
+    width: 100%;
+  }
+
+  &__title {
+    margin-bottom: 45px;
+  }
+
+  &__text {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+
+  &__list {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__link {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 135px;
+    height: 40px;
+    display: inline-block;
+  }
 }
 
 .footer {
@@ -312,20 +588,14 @@
     border-radius: 5px;
     color: $white;
     font-size: 14px;
-    @extend %rubik-500;
+    font-weight: 500;
     display: flex;
     align-items: center;
     width: 100%;
-    transition: outline 0.5s, background-color 0.5s, color 0.5s;
+    fill: $white;
+    transition: outline 0.5s, background-color 0.5s, color 0.5s, fill 0.5s;
 
-    &::before {
-      content: '';
-      background-image: url('../images/subscribe-icon.svg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: auto;
-      width: 14px;
-      height: 14px;
+    &-icon {
       display: block;
       margin-right: 10px;
     }
@@ -334,16 +604,19 @@
       outline: 2px solid rgba(255, 104, 56, 0.7);
       background-color: rgba(255, 122, 80, 0.1);
       color: $orange-900;
+      fill: $orange-900;
     }
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.1);
       color: $orange-900;
       outline: 2px solid rgba(255, 104, 56, 0.7);
+      fill: $orange-900;
     }
 
     &:active {
       background-color: rgba(255, 122, 80, 0.1);
+      fill: $orange-900;
     }
   }
 
@@ -354,6 +627,24 @@
     grid-auto-flow: column;
     margin-right: 70px;
     text-align: left;
+  }
+
+  &__link {
+    border-radius: 5px;
+    transition: outline 0.5s, color 0.5s, text-shadow 0.5s;
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+    }
+
+    &:hover {
+      color: $orange-900;
+    }
+
+    &:active {
+      color: $dark;
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
   }
 
   &__info-link {
@@ -397,13 +688,13 @@
   &__social-link {
     width: 39px;
     height: 39px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: auto;
-    display: inline-block;
-    background-color: $gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $silver-200;
     border-radius: 50%;
-    transition: outline 0.5s, background-color 0.5s;
+    transition: outline 0.5s, background-color 0.5s, fill 0.5s;
+    fill: $dark;
 
     &:focus {
       outline: 2px solid rgba(255, 104, 56, 0.7);
@@ -412,10 +703,12 @@
 
     &:hover {
       background-color: $orange-900;
+      fill: $white;
     }
 
     &:active {
       background-color: rgba(255, 122, 80, 0.1);
+      fill: $orange-900;
     }
   }
 
@@ -426,3 +719,282 @@
     text-align: center;
   }
 }
+
+.breadcrumbs {
+  background-color: $orange-500;
+  width: 100%;
+  padding: 24px 0;
+
+  &__list {
+    display: flex;
+  }
+
+  &__item {
+    &::after {
+      content: '';
+      background-image: url('../images/breadcrumbs-arrow.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      width: 6px;
+      height: 10px;
+      display: inline-block;
+      padding: 0 6px;
+    }
+
+    &:last-child {
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  &__link {
+    font-size: 14px;
+    line-height: 1.2;
+  }
+}
+
+.catalog {
+  padding-top: 60px;
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+  }
+
+  &__title {
+    margin: 0;
+  }
+
+  
+
+  &__select {
+    font-size: 14px;
+    line-height: 1.2;
+    padding: 15px;
+    border-radius: 3px;
+    border: 1px solid $gray;
+    appearance: none;
+
+    &::after {
+      content: '';
+      background-image: url('images/icon-select.svg');
+      width: 11px;
+      height: 6px;
+      display: block;
+    }
+
+    &:not(:last-child) {
+      margin-right: 15px;
+    }
+  }
+
+  &__inner {
+    display: flex;
+  }
+
+  &__filter {
+    margin-right: 30px;
+  }
+
+  &__filter-item {
+    width: 271px;
+    background-color: $white;
+    border-radius: 5px;
+    border: 1px solid $silver-200;
+    padding: 15px 15px 25px;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__filter-title {
+    font-size: 24px;
+    line-height: 1.2;
+    position: relative;
+    margin-bottom: 40px;
+
+    &::after {
+      content: '';
+      display: block;
+      border-bottom: 1px solid $silver-200;
+      height: 1px;
+      width: 271px;
+      position: absolute;
+      left: -15px;
+      bottom: -15px;
+    }
+  }
+
+  &__categories-item {
+    &:not(:last-child) {
+      margin-bottom: 12px;
+    }
+  }
+
+  &__categories-link {
+    line-height: 1.2;
+  }
+
+  &__offer-form {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+  }
+
+  &__offer-label {
+    position: relative;
+    padding-left: 36px;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      width: 24px;
+      height: 24px;
+      border-radius: 3px;
+      border: 1px solid $silver-200;
+      background-color: $orange-700;
+      display: block;
+      position: absolute;
+      left: 0;
+      transition: border 0.5s;
+    }
+
+    &::after {
+      content: '';
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      background-image: url('../images/checkbox-icon.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      width: 12px;
+      height: 9px;
+      left: 6px;
+      top: 8px;
+      opacity: 0;
+      transition: opacity 0.5s;
+    }
+  }
+
+  &__offer-input {
+    appearance: none;
+    position: absolute;
+
+    &:checked+.catalog__offer-label::after {
+      opacity: 1;
+    }
+
+    &:checked+.catalog__offer-label::before {
+      border: 1px solid $darkBlue-900
+    }
+  }
+
+  &__price-text {
+    font-size: 16px;
+    line-height: 1.2;
+    color: $gray;
+  }
+
+  &__price-currency {
+    font-size: 16px;
+    color: $gray;
+
+    &:not(:last-child) {
+      margin-right: 21px;
+    }
+  }
+
+  &__price-from,
+  &__price-to {
+    display: inline-block;
+    padding: 9px 16px;
+    font-size: 16px;
+    width: 70px;
+    height: 40px;
+    background-color: $orange-700;
+    border-radius: 3px;
+    border: 1px solid $silver-200;
+    text-align: center;
+  }
+
+  &__price-top {
+    margin-bottom: 25px;
+  }
+
+  &__price-form {
+
+    & .irs--flat .irs-line {
+      top: 8px;
+      height: 2px;
+      background-color: $silver-200;
+      border-radius: 0;
+    }
+
+    & .irs--flat .irs-bar {
+      top: 8px;
+      height: 2px;
+      background-color: $orange-900;
+    }
+
+    & .irs--flat .irs-handle {
+      top: 0;
+      width: 18px;
+      height: 18px;
+      background-color: $orange-900;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    & .irs--flat .irs-handle>i:first-child {
+      display: none;
+    }
+
+    & .irs--flat .irs-min,
+    .irs--flat .irs-max {
+      display: none;
+    }
+
+    & .irs-from,
+    .irs-to,
+    .irs-single {
+      display: none;
+    }
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+}
+
+.promo {
+  text-align: left;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__item {
+    max-width: 370px;
+    width: 100%;
+    background-color: $white;
+    border-radius: 10px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+  }
+
+  &__text {
+    padding: 15px 20px;
+    font-size: 24px;
+  }
+}
+
+@import 'media';
