--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -66,6 +66,18 @@
       margin-right: 40px;
     }
   }
+
+  .catalog {
+    &__content {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  .promo {
+    &__content {
+      flex-wrap: wrap;
+    }
+  }
 }
 
 @media (max-width: 992px) {
@@ -113,6 +125,12 @@
       order: 3;
       margin-top: 30px;
       margin-right: 0;
+    }
+  }
+
+  .catalog {
+    &__content {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
@@ -177,7 +195,7 @@
     width: 100%;
     transform: translateX(-200%);
     transition: transform 0.5s;
-    z-index: 1;
+    z-index: 99;
 
     &--active {
       transform: translateX(0);
@@ -331,6 +349,94 @@
     }
   }
 
+  .filter-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 47px;
+    height: 47px;
+    border-radius: 3px;
+    fill: $orange-900;
+    background-color: $orange-700;
+
+    &__close {
+      background-position: center;
+      background-size: auto;
+      background-repeat: no-repeat;
+      width: 44px;
+      height: 44px;
+      background-image: url('../images/burger-menu-close.svg');
+      position: absolute;
+      right: 9px;
+      top: 9px;
+      z-index: 1;
+    }
+  }
+
+  .catalog {
+    &__title {
+      margin-bottom: 20px;
+    }
+
+    &__top {
+      display: block;
+      margin-bottom: 30px;
+    }
+
+    &__inner {
+      position: relative;
+    }
+
+    &__filter {
+      position: absolute;
+      transform: translateX(-200%);
+      background-color: $white;
+      margin: 0;
+      box-shadow: 0px 0px 20px 4px $orange-700;
+      transition: transform 0.5s;
+    }
+
+    &__filter--active {
+      transform: translateX(-15px);
+    }
+
+    &__content {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  .promo {
+
+    &__content {
+      display: block;
+    }
+
+    .slick-initialized .slick-slide {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .slick-dots {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 30px;
+
+      & li {
+        width: 15px;
+        height: 15px;
+        background-color: $gray;
+        font-size: 0;
+        border-radius: 50%;
+      }
+
+      & .slick-active {
+        background-color: $orange-900;
+      }
+    }
+  }
+
 }
 
 @media (max-width: 576px) {
@@ -395,6 +501,12 @@
       grid-template-columns: repeat(1, 1fr);
       grid-auto-flow: row;
       gap: 20px;
+    }
+  }
+
+  .catalog {
+    &__content {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
