--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,11 +2,14 @@ $orange-900: #ff6838;
 $orange-500: #FFF2ED;
 $orange-700: #FAEDED;
 $dark: #31352b;
+$dark-500: #505050;
 $darkBlue-900: #363853;
+$silver-gray: #c1c1c1;
 $gray: #c2c2c2;
 $silver-100: #f9faff;
 $silver-200: #ececec;
 $silver-300: #EEEFF3;
+$silver-400: #E4E4E4;
 $white: #fff;
 
 %rubik-300 {
