--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -83,6 +83,28 @@ body {
   }
 }
 
+.btn--undreline {
+  text-decoration: underline;
+  transition: outline 0.5s, text-decoration-color 0.3s, color 0.5s, text-shadow 0.5s;
+  border-radius: 5px;
+
+  &:focus {
+    outline: 2px solid rgba(255, 104, 56, 0.7);
+    text-decoration-color: transparent;
+  }
+
+  &:hover {
+    color: $orange-900;
+    text-decoration-color: transparent;
+  }
+
+  &:active {
+    color: $dark;
+    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    text-decoration-color: transparent;
+  }
+}
+
 
 .sr-only {
   position: absolute;
@@ -95,4 +117,37 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.product-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 15px;
+  font-size: 15px;
+  background-color: $white;
+  border: 1px solid $silver-200;
+  border-radius: 5px;
+  transition: border-color 0.5s;
+
+  &:hover {
+    border-color: $orange-900;
+  }
+
+
+  &__img {
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    margin-bottom: 10px;
+    line-height: 1;
+  }
+
+  &__price {
+    font-weight: 500;
+    color: $darkBlue-900;
+    margin-bottom: 10px;
+  }
 }
