--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -142,25 +142,6 @@
 
   &__link {
     margin-left: 34px;
-    text-decoration: underline;
-    transition: outline 0.5s, text-decoration-color 0.3s, color 0.5s, text-shadow 0.5s;
-    border-radius: 5px;
-
-    &:focus {
-      outline: 2px solid rgba(255, 104, 56, 0.7);
-      text-decoration-color: transparent;
-    }
-
-    &:hover {
-      color: $orange-900;
-      text-decoration-color: transparent;
-    }
-
-    &:active {
-      color: $dark;
-      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-      text-decoration-color: transparent;
-    }
   }
 }
 
@@ -220,61 +201,9 @@
     margin-bottom: 60px;
   }
 
-  &__content-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 15px;
-    font-size: 15px;
-    background-color: $white;
-    border: 1px solid $silver-200;
-    border-radius: 5px;
-    transition: border-color 0.5s;
-
-    &:hover {
-      border-color: $orange-900;
-    }
-  }
-
-  &__img {
-    margin-bottom: 10px;
-  }
-
-  &__text {
-    margin-bottom: 10px;
-    line-height: 1;
-  }
-
-  &__number {
-    font-weight: 500;
-    color: $darkBlue-900;
-    margin-bottom: 10px;
-  }
-
-  &__button {
+  &__link {
     font-size: 20px;
     line-height: 1.5;
-    text-decoration: underline;
-    transition: outline 0.5s, text-decoration-color 0.3s, color 0.5s, text-shadow 0.5s;
-    border-radius: 5px;
-
-    &:focus {
-      outline: 2px solid rgba(255, 104, 56, 0.7);
-      text-decoration-color: transparent;
-    }
-
-    &:hover {
-      color: $orange-900;
-      text-decoration-color: transparent;
-    }
-
-    &:active {
-      color: $dark;
-      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-      text-decoration-color: transparent;
-    }
-
   }
 
 }
@@ -616,7 +545,7 @@
 
     &:active {
       background-color: rgba(255, 122, 80, 0.1);
-      fill: $orange-900;
+      fill: rgba(255, 122, 80, .1);
     }
   }
 
@@ -817,7 +746,7 @@
       border: 1px solid $gray;
     }
 
-    .jq-selectbox li{
+    .jq-selectbox li {
       background-color: $orange-900;
       color: #fff;
     }
@@ -1039,6 +968,415 @@
   &__text {
     padding: 15px 20px;
     font-size: 24px;
+  }
+}
+
+.product {
+  padding: 60px 0;
+  border-bottom: 1px solid $silver-400;
+  margin-bottom: 30px;
+
+  &__inner {
+    display: flex;
+  }
+
+  &__slider {
+    display: block;
+    width: 610px;
+    padding: 70px 105px;
+    background-color: $white;
+    margin-right: 30px;
+    position: relative;
+    border-radius: 5px;
+    border: 1px solid $silver-200;
+
+    .slick-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 1px;
+      width: 60px;
+      height: 60px;
+      border-radius: 6px;
+    }
+
+    .slick-prev {
+      left: 25px;
+    }
+
+    .slick-next {
+      right: 25px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 30px;
+  }
+
+  .star {
+    margin-bottom: 25px;
+  }
+
+  &__price {
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.4;
+    margin-bottom: 25px;
+    display: block;
+  }
+
+  & .product__input {
+    text-align: center;
+  }
+
+  &__form {
+    display: flex;
+    margin-bottom: 30px;
+  }
+
+  &__input {
+    width: 158px;
+    height: 44px;
+    border-color: transparent;
+    background-color: $orange-700;
+    position: relative;
+    font-size: 20px;
+    margin-right: 20px;
+
+    .jq-number__spin {
+      position: absolute;
+      width: 44px;
+      height: 44px;
+      background-color: $orange-900;
+      top: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &::after {
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background-color: $white;
+        border-radius: 5px;
+      }
+    }
+
+    .minus {
+      left: 0;
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px;
+    }
+
+    .plus {
+      right: 0;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+
+      &::before {
+        content: '';
+        width: 2px;
+        height: 20px;
+        background-color: $white;
+        position: absolute;
+        border-radius: 5px
+      }
+    }
+  }
+
+  &__btn {
+    fill: transparent;
+    stroke: $white;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      stroke: $orange-900;
+    }
+
+    &:focus {
+      stroke: $orange-900;
+    }
+  }
+
+  &__btn-icon {
+    margin-right: 15px;
+  }
+
+  &__info-title {
+    font-size: 24px;
+    border-bottom: 1px solid $silver-400;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+  }
+
+  &__info-list {
+    margin-bottom: 20px;
+  }
+
+  &__info-item {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+.product-tabs {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 120px;
+
+  &__inner {
+    width: 690px;
+  }
+
+  &__top-list {
+    display: flex;
+    gap: 60px;
+    margin-bottom: 30px;
+  }
+
+  &__top-link--active {
+    color: $orange-900;
+  }
+
+  &__content-item {
+    display: none;
+
+    &.product-tabs__content-item--active {
+      display: block;
+    }
+  }
+
+  &__description {
+    font-size: 20px;
+    line-height: 1.5;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__specification-item {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 500;
+
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+
+  &__specification-value {
+    font-weight: 400;
+  }
+
+  &__review-title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: $darkBlue-900;
+    margin-bottom: 30px;
+  }
+}
+
+.review {
+  margin-bottom: 60px;
+
+  &__item {
+    color: $dark-500;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid $silver-400;
+      padding-bottom: 20px;
+      margin-bottom: 25px;
+    }
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
+  &__img {
+    border-radius: 50%;
+    margin-right: 25px;
+  }
+
+  &__info {
+    flex-basis: 0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  &__name {
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  &__text {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
+  &__label {
+    display: block;
+
+    &--checkbox {
+      display: flex;
+      margin-bottom: 30px;
+    }
+  }
+
+  &__form-top {
+    margin-bottom: 20px;
+  }
+
+  &__form-inner {
+    display: flex;
+    margin-bottom: 20px;
+  }
+
+  &__input--radio {
+    appearance: none;
+    position: absolute;
+  }
+
+  &__reiting {
+    display: inline-block;
+  }
+
+  &__input {
+    border: 1px solid $gray;
+    border-radius: 5px;
+    padding: 16px 18px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+
+    &::placeholder {
+      color: $silver-gray;
+      font-size: 16px;
+    }
+  }
+
+  &__input--area {
+    width: 400px;
+    height: 165px;
+    resize: none;
+  }
+
+  &__checkbox {
+    position: relative;
+    padding-left: 36px;
+    cursor: pointer;
+    outline-color: transparent;
+
+    &::before {
+      content: '';
+      width: 24px;
+      height: 24px;
+      border-radius: 3px;
+      border: 1px solid $silver-gray;
+      background-color: $white;
+      display: block;
+      position: absolute;
+      left: 0;
+      transition: border 0.5s;
+    }
+
+    &::after {
+      content: '';
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      background-image: url('../images/checkbox-icon.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      width: 12px;
+      height: 9px;
+      left: 6px;
+      top: 8px;
+      opacity: 0;
+      transition: opacity 0.5s;
+    }
+
+    &:hover::before {
+      border: 2px solid $orange-700;
+    }
+
+    &:hover::after {
+      opacity: 0.2;
+    }
+
+    &:focus::before {
+      border-color: $orange-900;
+    }
+  }
+
+  &__input-checkbox {
+    appearance: none;
+    position: absolute;
+
+    &:checked+.review__checkbox::after {
+      opacity: 1;
+    }
+
+    &:checked+.review__checkbox::before {
+      border: 1px solid $orange-900;
+    }
+  }
+}
+
+.resent {
+  &__inner {
+    position: relative;
+  }
+
+  &__content {
+    text-align: center;
+
+    .slick-initialized .slick-slide {
+      margin-right: 30px;
+    }
+
+    .slick-slide {
+      width: 220px;
+
+      &:not(:last-child) {
+        margin-left: 16px;
+
+      }
+    }
+
+    .slick-arrow {
+      position: absolute;
+      top: -100px;
+      fill: $gray;
+      border: 3px solid $gray;
+      border-radius: 50%;
+      width: 34px;
+      height: 34px;
+    }
+
+    .slick-prev {
+      right: 50px;
+    }
+
+    .slick-next {
+      right: 0;
+    }
+  }
+
+  &__item {
+    width: 219px;
+    height: 299px;
   }
 }
 
