--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -937,6 +937,57 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+
+  &__list {
+    display: flex;
+    gap: 6px;
+  }
+
+  &__item {
+    width: 48px;
+    height: 48px;
+    border-radius: 3px;
+    background-color: $orange-700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__link {
+    width: 48px;
+    height: 48px;
+    transition: background-color 0.5s, color 0.5s, border-color 0.5s, border 0.5s, box-shadow 0.5s, fill 0.5s;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: $darkBlue-900;
+
+    &--active {
+      border: 1px solid $darkBlue-900;
+    }
+
+    &:hover {
+      background-color: $orange-900;
+      color: $white;
+      border-color: transparent;
+      fill: $white;
+    }
+
+    &:focus {
+      border: 1px solid $orange-900;
+    }
+
+    &:active {
+      box-shadow: inset 0px -1px 4px 2px rgba(0, 0, 0, 0.15);
+    }
   }
 }
 
@@ -1090,6 +1141,11 @@
     stroke: $white;
     display: flex;
     align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    width: 247px;
+    height: 44px;
+    border-radius: 3px;
 
     &:hover {
       stroke: $orange-900;
@@ -1240,6 +1296,7 @@
   &__form-inner {
     display: flex;
     margin-bottom: 20px;
+    gap: 30px;
   }
 
   &__input--radio {
@@ -1256,11 +1313,21 @@
     border-radius: 5px;
     padding: 16px 18px;
     margin-top: 15px;
-    margin-bottom: 10px;
+    display: block;
 
     &::placeholder {
       color: $silver-gray;
       font-size: 16px;
+    }
+
+    
+  }
+
+  &__label--small {
+    .review__label {
+      &:not(:last-child) {
+          margin-bottom: 13px;
+        }
     }
   }
 
